dataset1235/2025-2/1153765216/users/1452895412/executions/2814675586_593159971.log
== SUBMISSION (2025-08-26 18:54:30)
-- CODE: 
nota1 = float(input(print("Digite o primeiro numero: ")))
nota2 = float(input(print("Digite o segundo numero: ")))
nota3 = float(input(print("Digite o terceiro numero: ")))
media = (nota1 + nota2 + nota3) / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
None6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
None8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
None5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
None2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
None9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
None3.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:54:02)
-- CODE: 
nota1 = float(input(print("Digite o primeiro numero: ")))
nota2 = float(input(print("Digite o segundo numero: ")))
nota3 = float(input(print("Digite o terceiro numero: ")))
media = ((nota1 + nota2) + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ((nota1 + nota2) + notas3) / 3
                               ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ((nota1 + nota2) + notas3) / 3
                               ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ((nota1 + nota2) + notas3) / 3
                               ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ((nota1 + nota2) + notas3) / 3
                               ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ((nota1 + nota2) + notas3) / 3
                               ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = ((nota1 + nota2) + notas3) / 3
                               ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:53:54)
-- CODE: 
nota1 = float(input(print("Digite o primeiro numero: ")))
nota2 = float(input(print("Digite o segundo numero: ")))
nota3 = float(input(print("Digite o terceiro numero: ")))
media = (nota1 + nota2) + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2) + notas3) / 3
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2) + notas3) / 3
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2) + notas3) / 3
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2) + notas3) / 3
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2) + notas3) / 3
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2) + notas3) / 3
                                    ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:53:46)
-- CODE: 
nota1 = float(input(print("Digite o primeiro numero: ")))
nota2 = float(input(print("Digite o segundo numero: ")))
nota3 = float(input(print("Digite o terceiro numero: ")))
media = (nota1 + nota2 + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
